# film-club

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  tor.md
docs/: develop.md
knn/: knn.cpp  knn.sln  knn.vcxproj  knn.vcxproj.filters
knn/Debug/: knn.ilk  vc142.idb
knn/Debug/knn.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  knn.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
middleware/kkkollect/: PKGBUILD  README.md  default-config.json  main.go
middleware/kkkustoms/: PKGBUILD  README.md  db.go  default-config.json  handlers.go  kkkustoms.service  main.go  types.go
